--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:postgresql://localhost/schoolEnd
+spring.datasource.username=postgres
+spring.datasource.password=enot
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
 
+spring.freemarker.expose-request-attributes=true
